--- a/jessie.conf
+++ b/jessie.conf
@@ -11,6 +11,8 @@ bootstrap=machinekit-build-deps machinekit debian updates
 [machinekit-build-deps]
 packages=machinekit-build-deps
 packages=build-essential
+# Run-time deps for testing
+packages=netcat-openbsd
 
 source=file:/tmp/debs ./
 
