--- a/rpi.conf
+++ b/rpi.conf
@@ -4,17 +4,13 @@ ignorenativearch=true
 noauth=true
 unpack=true
 setupscript=/usr/share/multistrap/chroot.sh
-bootstrap=machinekit-build-deps machinekit raspbian
+bootstrap=package-build-deps raspbian
 
-[machinekit-build-deps]
-packages=machinekit-build-deps
+[package-build-deps]
+packages=package-build-deps
 packages=build-essential
 
 source=file:/tmp/debs ./
-
-[machinekit]
-source=http://deb.machinekit.io/debian
-suite=jessie
 
 [raspbian]
 source=http://archive.raspbian.org/raspbian
